feat: implemento PIN, reintentos, bloqueo, modales, estilos, etc...